<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.EducationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="Education"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bullet_oval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView5" />

            <View
                android:id="@+id/view"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:maxHeight="@android:dimen/thumbnail_height"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="October 2020"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/oct_2020"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hsc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bullet_oval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView15" />

            <View
                android:id="@+id/view1"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:maxHeight="@android:dimen/thumbnail_height"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textView20"
                app:layout_constraintEnd_toEndOf="@+id/imageView1"
                app:layout_constraintStart_toStartOf="@+id/imageView1"
                app:layout_constraintTop_toTopOf="@+id/textView20" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="June 2017"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/june_2017"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView1"
                app:layout_constraintTop_toBottomOf="@+id/textView19" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ssc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bullet_oval"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView25" />

            <View
                android:id="@+id/view2"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:maxHeight="@android:dimen/thumbnail_height"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/textView30"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:text="July 2015"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView25" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8sp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/july_2015"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>